fix(consumer): fix datahub usage event topic consumer